--- a/Latte1/Album.storyboard
+++ b/Latte1/Album.storyboard
@@ -43,10 +43,15 @@
                                                     <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eLb-fW-Ajj">
+                                                    <rect key="frame" x="0.0" y="0.0" width="127" height="127"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
                                         </view>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
+                                            <outlet property="image" destination="eLb-fW-Ajj" id="w92-UH-hQZ"/>
                                             <outlet property="label" destination="6yk-yh-3I8" id="uyz-S1-6Lj"/>
                                             <segue destination="beh-8S-o1S" kind="show" identifier="TPhoto_segue" id="vQP-HS-9fK"/>
                                         </connections>
@@ -105,7 +110,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L0u-iL-Ntu" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1276" y="757.87106446776613"/>
+            <point key="canvasLocation" x="-1276.8115942028987" y="757.36607142857144"/>
         </scene>
         <!--Album-->
         <scene sceneID="4NA-Ru-JPf">
@@ -172,7 +177,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" restorationIdentifier="TCell" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sut-vw-XV3">
-                                <rect key="frame" x="0.0" y="64" width="375" height="425"/>
+                                <rect key="frame" x="0.0" y="88" width="375" height="425"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </scrollView>
                         </subviews>
