--- a/Latte1/Days.storyboard
+++ b/Latte1/Days.storyboard
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rbj-75-iFX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rbj-75-iFX">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Calendar-->
+        <!--Days-->
         <scene sceneID="Cva-jA-o0S">
             <objects>
                 <tableViewController id="rbj-75-iFX" sceneMemberID="viewController">
@@ -32,7 +32,7 @@
                             <outlet property="delegate" destination="rbj-75-iFX" id="aPL-ID-z34"/>
                         </connections>
                     </tableView>
-                    <tabBarItem key="tabBarItem" title="Calendar" image="like" id="4Qz-lf-K2C"/>
+                    <tabBarItem key="tabBarItem" title="Days" image="like" id="4Qz-lf-K2C"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P0i-S5-9vo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -40,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="like" width="21.333333969116211" height="21.333333969116211"/>
+        <image name="like" width="21" height="21"/>
     </resources>
 </document>
