대화 보내고 받는거 구현

--- a/Latte1/Base.lproj/Main.storyboard
+++ b/Latte1/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jBu-2x-EkC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jBu-2x-EkC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -411,7 +411,7 @@
                     <connections>
                         <outlet property="confirm" destination="O0c-sw-dMw" id="NCf-nq-suh"/>
                         <segue destination="SqD-w0-S5J" kind="unwind" identifier="confirmTologin" unwindAction="unwind:" id="gVB-BU-eYB"/>
-                        <segue destination="SqD-w0-S5J" kind="unwind" identifier="confirmToauth" unwindAction="unwind3:" id="vwq-NT-fBq"/>
+                        <segue destination="SqD-w0-S5J" kind="unwind" identifier="confirmToauthdate" unwindAction="unwind3:" id="vwq-NT-fBq"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6MH-bw-vNA" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -421,9 +421,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="like" width="21.333333969116211" height="21.333333969116211"/>
+        <image name="like" width="21" height="21"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Zf6-fT-Grp"/>
+        <segue reference="fYf-de-rNm"/>
     </inferredMetricsTieBreakers>
 </document>
