--- a/Latte1/Base.lproj/Main.storyboard
+++ b/Latte1/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jBu-2x-EkC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="jBu-2x-EkC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -185,17 +185,16 @@
                     </view>
                     <connections>
                         <outlet property="textfield" destination="o9V-dq-j8s" id="yDh-8q-qdd"/>
-                        <segue destination="G0x-CH-AA6" kind="show" identifier="matchToconfirm" id="LZh-zR-zyJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8xU-7m-Ojd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1047.2" y="903.59820089955031"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Main View Controller-->
         <scene sceneID="6bv-hX-xC0">
             <objects>
-                <tabBarController id="fz3-ab-Iug" sceneMemberID="viewController">
+                <tabBarController id="fz3-ab-Iug" customClass="MainViewController" customModule="Latte1" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="KnN-Gn-hqt">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -488,9 +487,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="like" width="21.333333969116211" height="21.333333969116211"/>
+        <image name="like" width="21" height="21"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="LZh-zR-zyJ"/>
+        <segue reference="fYf-de-rNm"/>
     </inferredMetricsTieBreakers>
 </document>
